<resources>
    <string name="app_name">优优家长</string>

    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">上次刷新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在刷新…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>

    <!-- 图片保存的文字 -->
    <string name="picture_save_succeed">图片已保存到相册</string>
    <string name="picture_save_fail">保存图片失败</string>
    <string name="picture_next_album">下一组：</string>
    <string name="picture_previous_album">上一组：</string>
    <string name="app_cancel">取消</string>
    <string name="app_sure">确定</string>
    <string name="app_tip">提示</string>
    <!--微信图片-->
    <string name="image">图片</string>
    <string name="confirm">确定</string>
    <string name="preview">预览</string>
    <string name="select">选择</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="text_uninstalled_wchat">请安装微信</string>

    <string name="android_auto_update_dialog_title">发现新版本</string>

    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>

    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>

    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>

    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>

    <string name="android_auto_update_dialog_checking">正在检查版本</string>
    <string name="android_parent_judge">您的账号登录已被登录，请重新登录</string>
    <string name="android_parent_positive">确定</string>
    <string name="parent_dialog_cancel">取消</string>
    <string name="parent_not_more_data">没有更多的数据</string>
    <string name="parent_net_pool">网速不佳</string>
    <string name="android_success">isSuccess</string>
    <string name="android_delete_false">出现未知错误</string>
    <string name="feed_back_title">用户反馈</string>
    <string name="delete">删除</string>
    <string name="user_report">用户反馈</string>
    <string name="report_message">反馈信息</string>
    <string name="commit">提交</string>
    <string name="please_input">请输入内容</string>
    <string name="select_student">选择考生</string>
    <string name="add">添加</string>
    <string name="chengji">成绩查询</string>
    <string name="books">图书</string>
    <string name="black_list">加入黑名单</string>
    <string name="hide_single">屏蔽本条信息</string>
    <string name="hide_all">屏蔽所有信息</string>
    <string name="display_information">显示屏蔽的信息</string>
    <string name="cancel">取消</string>
    <string name="commodity">商品</string>
    <string name="shop">立即购买</string>
    <string name="exit_message">再按一次退出</string>
    <string name="str_press">出版社</string>
    <string name="q">正品保证</string>
    <string name="w">急速退款</string>
    <string name="e">公益宝贝</string>
    <string name="r">七天退款</string>
    <string name="about">内容简介 :</string>
    <string name="transitionName_pic">transitionName_pic</string>
    <string name="pay">付款</string>
    <string name="up">+</string>
    <string name="down">—</string>
    <string name="buy_count">购买数量</string>
    <string name="courier_mode">配送方式</string>
    <string name="_10_00">快递费用10.00元</string>
    <string name="buyer_msg">买家留言 : </string>
    <string name="_12_4">选填 : 对本次交易的说明</string>
    <string name="commit_order">提交订单</string>
    <string name="study_order">考证订单</string>
    <string name="books_order">图书订单</string>
    <string name="set">设置</string>
    <string name="login_out">退出登录</string>
    <string name="address_manager">地址管理</string>
    <string name="message_control">消息中心</string>
<<<<<<< HEAD
    <string name="top">置顶</string>
    <string name="adm_revert">管理员回复</string>
    <string name="QA">问答</string>
    <string name="q_a">问答</string>
    <string name="answer">回答</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_and_close">清除缓存并关闭</string>
    <string name="expand">展开</string>
    <string name="share">分享</string>
    <string name="publish">发布</string>
    <string name="close">关闭</string>
    <string name="img">图片</string>
    <string name="please_wait">请稍等…</string>
    <string name="all_comment">全部评论</string>
    <string name="write_comment">写评论</string>
    <string name="load_more_on_click">点击加载更多</string>
    <string name="comment">评论</string>
    <string name="write_reply_more">写评论…</string>
    <string name="reply">回复</string>
    <string name="send">发送</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="praise">赞</string>
    <string name="qa_collect">问答收藏</string>
    <string name="clear_home_cache">清除首页缓存</string>
    <string name="the_new_version">版本更新</string>
    <string name="now_download">现在安装</string>
    <string name="later_talk">下次再说</string>
    <string name="waiting">waiting...</string>
    <string name="hot">热文</string>
    <string name="error">加载失败，轻触重试。</string>
    <string name="my_dynamic">我的动态</string>
    <string name="encourage">点赞是美意，打赏是鼓励!</string>
    <string name="money10">￥10.00</string>
    <string name="reward">打赏</string>
    <string name="money0">00.00</string>
    <string name="reward_hint">最多打赏200元</string>
=======
>>>>>>> parent of 8d52dad... 17_12_19

</resources>
