<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDEDF">

    <TextView
        android:id="@+id/_top"
        style="@style/dialog_text"
        android:background="@color/white_transparent"
        android:text="@string/top" />

    <TextView
        android:id="@+id/black"
        style="@style/dialog_text"
        android:layout_marginTop="1dp"
        android:background="@color/white_transparent"
        android:text="@string/black_list"
        app:layout_constraintTop_toBottomOf="@id/_top" />

    <TextView
        android:id="@+id/hide"
        style="@style/dialog_text"
        android:layout_marginTop="1dp"
        android:background="@color/white_transparent"
        android:text="@string/hide_single"
        app:layout_constraintTop_toBottomOf="@id/black" />

    <TextView
        android:id="@+id/hide_all"
        style="@style/dialog_text"
        android:layout_marginTop="1dp"
        android:background="@color/white_transparent"
        android:text="@string/hide_all"
        app:layout_constraintTop_toBottomOf="@id/hide" />

    <TextView
        android:id="@+id/display"
        style="@style/dialog_text"
        android:layout_marginTop="1dp"
        android:background="@color/white_transparent"
        android:text="@string/display_information"
        app:layout_constraintTop_toBottomOf="@id/hide_all" />

    <TextView
        android:id="@+id/cancel"
        style="@style/dialog_text"
        android:layout_marginTop="7dp"
        android:background="@color/white_transparent"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/display" />
</android.support.constraint.ConstraintLayout>