<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/posted_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/posted_close"
            style="@style/style_img_all_close"
            android:contentDescription="@null"
            android:src="@mipmap/cancel" />

        <TextView
            style="@style/style_text_all_title"
            android:text="@string/report_message" />

        <TextView
            android:id="@+id/posted_commit"
            style="@style/style_img_all_posted"
            android:gravity="center"
            android:text="@string/commit"
            android:textColor="#FFF"
            android:textSize="16sp" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/posted_content"
        android:layout_width="match_parent"
        android:maxHeight="@dimen/dp120"
        android:layout_height="wrap_content"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/please_input"
        android:padding="@dimen/dp_15"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/posted_toolbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/posted_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/posted_content" />
</android.support.constraint.ConstraintLayout>