<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dp5">

        <android.support.v7.widget.Toolbar
            android:id="@+id/_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/status_bar"
            app:contentInsetStart="0dp">

            <TextView
                android:id="@+id/_close"
                android:layout_width="@dimen/dp50"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16" />

            <TextView
                style="@style/style_text_all_title"
                android:text="@string/answer"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/_publish"
                style="@style/style_img_all_posted"
                android:gravity="center"
                android:text="@string/publish"
                android:textColor="@android:color/holo_blue_dark" />
        </android.support.v7.widget.Toolbar>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_card" >

        <LinearLayout
            android:id="@+id/_verticalParent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content" />
    </ScrollView>
</android.support.constraint.ConstraintLayout>