<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:padding="@dimen/dp10"
        android:src="@drawable/dismiss" />

    <com.neworld.youyou.view.nine.CircleImageView
        android:id="@+id/icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="@dimen/dp15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dismiss"
        tools:src="@drawable/bigimage" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        android:text="@string/encourage"
        android:textColor="@color/grayDark"
        android:textSize="@dimen/sp18"
        app:layout_constraintLeft_toLeftOf="@id/icon"
        app:layout_constraintRight_toRightOf="@id/icon"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/money10"
        android:textColor="@color/black"
        android:textSize="@dimen/sp30"
        app:layout_constraintEnd_toStartOf="@+id/input_m"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:text="￥" />

    <EditText
        android:id="@+id/input_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp15"
        android:paddingRight="@dimen/dp15"
        android:hint="@string/reward_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:inputType="numberDecimal"
        android:visibility="gone"
        android:maxLength="6"
        app:layout_constraintBottom_toBottomOf="@id/money"
        app:layout_constraintEnd_toStartOf="@+id/money_set"
        app:layout_constraintStart_toEndOf="@id/money"
        app:layout_constraintTop_toTopOf="@id/money"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/money_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/money_edit"
        app:layout_constraintBottom_toTopOf="@id/money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_m"
        app:layout_constraintTop_toBottomOf="@id/money"
        app:layout_goneMarginStart="@dimen/dp10" />

    <Button
        android:id="@+id/pay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/reward_btn_bg"
        android:text="@string/reward"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/money" />
</android.support.constraint.ConstraintLayout>