<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/_parent"
    android:layout_height="match_parent"
    android:background="#F0EFF5">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FDFDFD"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/close"
            style="@style/style_img_all_close"
            android:contentDescription="@null"
            android:src="@mipmap/cancel"
            android:tint="@color/black" />

        <TextView
            style="@style/style_text_all_title"
            android:text="@string/pay"
            android:textColor="@color/black" />
    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D5D5D5"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/line">

        <TextView
            android:id="@+id/_name"
            style="@style/style_books_pay_address"
            android:layout_marginLeft="@dimen/dp45"
            android:layout_marginStart="@dimen/dp45"
            android:layout_marginTop="@dimen/dp15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="东方老赢" />

        <TextView
            android:id="@+id/_address"
            style="@style/style_books_pay_address"
            android:layout_marginTop="@dimen/dp15"
            android:maxEms="15"
            android:paddingBottom="@dimen/dp15"
            android:singleLine="true"
            app:layout_constraintLeft_toLeftOf="@id/_name"
            app:layout_constraintTop_toBottomOf="@id/_name"
            tools:text="亿哈丢晒USD秀爱丢弃都会第九器我电话六千地区的以后千万西好滴好滴 " />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginStart="@dimen/dp15"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/address"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/_address" />

        <ImageView
            android:id="@+id/right_icon"
            android:layout_width="@dimen/dp45"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@mipmap/jiantou"
            android:tint="#CECED0"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/_phone"
            style="@style/style_books_pay_address"
            android:maxLength="11"
            android:maxLines="1"
            app:layout_constraintRight_toLeftOf="@id/right_icon"
            app:layout_constraintTop_toTopOf="@id/_name"
            tools:text="13078787899" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        android:background="@color/white"
        android:paddingEnd="0dp"
        android:paddingLeft="@dimen/dp15"
        android:paddingRight="0dp"
        android:paddingStart="@dimen/dp15"
        app:layout_constraintTop_toBottomOf="@id/delivery">

        <ImageView
            android:id="@+id/book_icon"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_marginTop="@dimen/dp10"
            android:contentDescription="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/bigimage" />

        <TextView
            android:id="@+id/book_name"
            style="@style/style_books_text_m"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginStart="@dimen/dp15"
            android:maxEms="10"
            android:singleLine="true"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@id/book_icon"
            app:layout_constraintTop_toTopOf="@id/book_icon"
            tools:text="iqdiuhqiwduaskdniouqhqidqid" />

        <TextView
            android:id="@+id/book_price"
            style="@style/style_books_text_m"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintBottom_toBottomOf="@id/book_icon"
            app:layout_constraintLeft_toLeftOf="@id/book_name"
            tools:text="¥50.00" />

        <TextView
            android:id="@+id/num"
            style="@style/style_books_text_m"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/book_icon"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="x1" />

        <View
            android:id="@+id/line1"
            style="@style/book_line"
            app:layout_constraintTop_toBottomOf="@id/book_icon" />

        <TextView
            android:id="@+id/buy_count"
            style="@style/style_books_text_m"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/buy_count"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <Button
            android:id="@+id/up"
            android:layout_width="@dimen/dp25"
            android:layout_height="@dimen/dp25"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:background="#F1F1F1"
            android:text="@string/up"
            app:layout_constraintBottom_toBottomOf="@id/buy_count"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/buy_count" />

        <TextView
            android:id="@+id/count"
            style="@style/style_books_text_m"
            android:paddingLeft="@dimen/dp15"
            android:paddingRight="@dimen/dp15"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/buy_count"
            app:layout_constraintRight_toLeftOf="@id/up"
            app:layout_constraintTop_toTopOf="@id/buy_count"
            tools:text="1" />

        <Button
            android:id="@+id/down"
            android:layout_width="@dimen/dp25"
            android:layout_height="@dimen/dp25"
            android:background="#F1F1F1"
            android:text="@string/down"
            app:layout_constraintBottom_toBottomOf="@id/buy_count"
            app:layout_constraintRight_toLeftOf="@id/count"
            app:layout_constraintTop_toTopOf="@id/buy_count" />

        <View
            android:id="@+id/line2"
            style="@style/book_line"
            app:layout_constraintTop_toBottomOf="@id/buy_count" />

        <TextView
            android:id="@+id/courier_mode"
            style="@style/style_books_text_m"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/courier_mode"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <TextView
            style="@style/style_books_text_m"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:text="@string/_10_00"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/courier_mode"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/line3"
            style="@style/book_line"
            app:layout_constraintTop_toBottomOf="@id/courier_mode" />

        <TextView
            android:id="@+id/buyer_msg"
            style="@style/style_books_text_m"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/buyer_msg"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/line3" />

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/_12_4"
            android:inputType="text"
            android:maxEms="12"
            android:maxLines="1"
            android:textSize="@dimen/sp14"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintBottom_toBottomOf="@id/buyer_msg"
            app:layout_constraintLeft_toRightOf="@id/buyer_msg"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/line4"
            style="@style/book_line"
            app:layout_constraintTop_toBottomOf="@id/buyer_msg" />

        <TextView
            android:id="@+id/total"
            style="@style/style_books_text_m"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line4"
            tools:text="¥60.00" />

        <TextView
            android:id="@+id/commodity"
            style="@style/style_books_text_m"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/total"
            app:layout_constraintRight_toLeftOf="@id/total"
            tools:text="共1件商品" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:paddingLeft="@dimen/dp30"
            android:paddingRight="@dimen/dp30"
            android:text="@string/commit_order"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/total_money"
            style="@style/style_books_text_m"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/commit"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="合计: ¥60.00" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>