<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@drawable/update_bg">

    <TextView
        android:id="@+id/_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/dp10"
        android:paddingTop="@dimen/dp15"
        android:text="@string/the_new_version"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="版本更新" />

    <TextView
        android:id="@+id/_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp15"
        android:paddingLeft="@dimen/dp15"
        android:paddingRight="@dimen/dp15"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_title"
        tools:text="iOS 10.1.1，可用于您的iPhone且已经可以安装啦啦啦啦啦啦啦啦。" />

    <com.neworld.youyou.view.mview.comment.HProgress
        android:id="@+id/_progress"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginLeft="@dimen/dp5"
        android:layout_marginRight="@dimen/dp5"
        android:layout_marginTop="@dimen/dp15"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/_content" />

    <TextView
        android:id="@+id/_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/sp14"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/_progress"
        app:layout_constraintLeft_toLeftOf="@id/_progress"
        app:layout_constraintRight_toRightOf="@id/_progress"
        tools:text="55%" />

    <View
        android:id="@+id/_line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_content" />

    <TextView
        android:id="@+id/_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp15"
        android:text="@string/now_download"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_line1" />

    <View
        android:id="@+id/_line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_now" />

    <TextView
        android:id="@+id/_later"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp15"
        android:text="@string/later_talk"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp18"
        android:visibility="gone"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="162dp" />
</android.support.constraint.ConstraintLayout>